[project]
name = "ssh-key-mgr"
version = "0.1.0"
description = "Manager of SSH Keys"
readme = "README.md"
requires-python = ">=3.13"
authors = [
    {name = "Kalle M. Krog Aagaard", email = "git@k-moeller.dk"},
]
maintainers = [
    {name = "Kalle M. Krog Aagaard", email = "git@k-moeller.dk"},
]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
]

[project.urls]
Homepage = "https://github.com/KalleDK/py-ssh-key-mgr"
Documentation = "https://github.com/KalleDK/py-ssh-key-mgr"
Repository = "https://github.com/KalleDK/py-ssh-key-mgr.git"

[dependency-groups]
test = [
    "pytest>=8.4.2",
]
stubs = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ssh_key_mgr"]

[tool.pyright]
include = ["src", "tests", "examples"]
typeCheckingMode = "strict"
exclude = ["**/__pycache__"]
pythonVersion = "3.13"

[tool.ruff]
line-length = 120
target-version = "py313"
